# rusty-todo

./: Cargo.toml  README.md  testing
src/: cli.rs  main.rs
src/task/: mod.rs  status.rs  tests.rs
src/task/buffer/: mock.rs  mod.rs
tests/: add.rs  complete.rs  list.rs
tests/common/: mod.rs
