[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
comfy-table = "7.1.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
structopt = "0.3.26"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
bincode = "1.3.3"
fakeit = "1.3.0"
tempfile = "3.14.0"
